# c2ba-maths

./: CMakeLists.txt  README.md
cmake/: FindGLM.cmake
lib/cmake/: info.hpp.in
lib/include/c2ba/maths/: aabb.hpp  colors.hpp  constants.hpp  geometry.hpp  glm.hpp  logic.hpp  numeric.hpp  optics.hpp  radiometry.hpp  trigonometry.hpp  types.hpp
lib/include/c2ba/maths/mappings/: cube_mappings.hpp  dual_paraboloid_mappings.hpp  hemispherical_mappings.hpp  image_mappings.hpp  paraboloid_mappings.hpp  spherical_mappings.hpp
lib/include/c2ba/maths/sampling/: DiscreteDistribution.hpp  Random.hpp  Sample.hpp  distribution1d.hpp  distribution2d.hpp  measures.hpp  multiple_importance_sampling.hpp  patterns.hpp  shapes.hpp
lib/src/sampling/: distribution1d.cpp  distribution2d.cpp  shapes.cpp
tests/: headers_compilation_test.cpp.in  main.cpp
